--- a/DragAndropView/app/src/main/res/layout/activity_main.xml
+++ b/DragAndropView/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="test.launcher.mummu.dragandropview.MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/dragImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@mipmap/ic_launcher" />
 </RelativeLayout>
